# gpu_layout

./: .gitignore  Cargo.toml
macros/: Cargo.toml
macros/src/: lib.rs  std140.rs
src/: common.rs  lib.rs  rw.rs  std140.rs  std430.rs
src/common/: array.rs  scalar.rs
src/std140/: array.rs  matrix.rs  vector.rs
